adjust spacing for fixed nav

--- a/docs/source/stylesheets/site.css.scss
+++ b/docs/source/stylesheets/site.css.scss
@@ -114,8 +114,9 @@ section.nav {
     position: fixed;
     top: 0;
     margin: 0 auto !important;
-    width: 61em;
-    background-color: white
+    width: 59em;
+    background-color: white;
+    left: 13%;
   }
 }
 
